# bigfile_hashcalc

./: CMakeLists.txt  README.md  block_info.h  calc_hash.files  cmd_parser.h  custom_exceptions.cpp  custom_exceptions.h  fileconverter_to_hash.cpp  fileconverter_to_hash.h  main.cpp
